--- a/HospitalInterfaz/src/main/java/presentation/JFrameLogin.form
+++ b/HospitalInterfaz/src/main/java/presentation/JFrameLogin.form
@@ -150,8 +150,8 @@
                               <Component id="txtUser" max="32767" attributes="0"/>
                               <Component id="Iniciar_Sesion" pref="166" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="Usuario" min="-2" pref="62" max="-2" attributes="0"/>
                           <Component id="txtPassword" alignment="0" min="-2" pref="170" max="-2" attributes="0"/>
+                          <Component id="Usuario" alignment="0" min="-2" pref="75" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="39" max="32767" attributes="0"/>
                   </Group>
