--- a/HospitalInterfaz/src/main/java/presentation/JFrameRegisterAppointment.form
+++ b/HospitalInterfaz/src/main/java/presentation/JFrameRegisterAppointment.form
@@ -78,7 +78,7 @@
                       </Group>
                       <Group type="102" attributes="0">
                           <EmptySpace min="280" pref="280" max="-2" attributes="0"/>
-                          <Component id="txtNota" min="-2" pref="320" max="-2" attributes="0"/>
+                          <Component id="txtNote" min="-2" pref="320" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
                           <EmptySpace min="100" pref="100" max="-2" attributes="0"/>
@@ -160,7 +160,7 @@
                   <EmptySpace pref="55" max="32767" attributes="0"/>
                   <Component id="jLabel13" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="8" pref="8" max="-2" attributes="0"/>
-                  <Component id="txtNota" min="-2" pref="40" max="-2" attributes="0"/>
+                  <Component id="txtNote" min="-2" pref="40" max="-2" attributes="0"/>
                   <EmptySpace min="50" pref="50" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="btnCancel" min="-2" max="-2" attributes="0"/>
@@ -271,9 +271,9 @@
             <Property name="text" type="java.lang.String" value="Note..."/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtNota">
+        <Component class="javax.swing.JTextField" name="txtNote">
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNotaActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNoteActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="cbxSpecialization">
